src/objects/Download_cache__c.object
<CustomObject>
    <description>Download history</description>
    <fields>
        <fullName>Content_Description_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Content Description ID</label>
        <referenceTo>Content_Description__c</referenceTo>
        <relationshipLabel>Download cache</relationshipLabel>
        <relationshipName>Download_cache</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Content_ID__c</fullName>
        <formula>Content_Description_ID__r.Content_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Content ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Name__c</fullName>
        <label>Content Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Content_Version_Id__c</fullName>
        <label>Content Version Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Download cache</label>
    <nameField>
        <label>Download cache Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Download cache</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>